tests/tooling/fixtures/native/execution/positive/message_send_nil_bound_identifier_unary_elision.objc3
// Positive execution fixture: immutable nil-bound identifier unary send is compile-time elided and links without runtime shim.
module MessageSendNilBoundIdentifierUnaryElisionExecution;

fn main() {
  let receiver = nil;
  let sent = [receiver ping];
  return sent + 12;
}
