tests/tooling/fixtures/native/execution/negative/numeric_zero_receiver_runtime_dispatch_unresolved_symbol.objc3
// Negative execution fixture: numeric zero receiver is non-elided and retains runtime-dispatch linkage dependency.
module NumericZeroReceiverRuntimeDispatchUnresolvedSymbol;

fn main() -> i32 {
  return [0 ping];
}
